Use API 30 compatible container config reads